# Platni-zabojcy

./: CMakeLists.txt  Client.cpp  Client.h  Company.cpp  Company.h  Lamport.cpp  Lamport.h  Parameters.h  main.cpp
